--- a/app/views/home.html
+++ b/app/views/home.html
@@ -4,8 +4,13 @@
   <div class="page-header">
     <h1>Tervetuloa Reseptiarkistoon!</h1>
   </div>
+  <div>
+    <h2>Suosituimmat reseptit:</h2>
+    <div class="list-group">
+      <a href="#" class="list-group-item">Jauhelihakeitto</a>
+      <a href="#" class="list-group-item">Jauhelihamakaronilaatikko</a>
+      <a href="#" class="list-group-item">Jauhelihapihvit</a>
+    </div>
+  </div>
 
-  <p>
-    <a href="http://tsoha.github.io" class="btn btn-primary btn-lg">Tutustu materiaaliin <span class="glyphicon glyphicon-chevron-right"></span></a>
-  </p>
 {% endblock %}
