--- a/app/views/base.html
+++ b/app/views/base.html
@@ -17,12 +17,13 @@
 
       <!-- Oma tyylitiedostomme -->
       <link href="{{base_path}}/assets/css/site.css" rel="stylesheet">
+      <script src="https://use.fontawesome.com/f114e4802d.js"></script>
     {% endblock %}
   </head>
 
   <body>
-
-    <nav class="navbar navbar-default" role="navigation">
+    <div id="wrapper">
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container-fluid">
 
         <div class="navbar-header">
@@ -39,21 +40,67 @@
         <div class="collapse navbar-collapse" id="navigation">
           <ul class="nav navbar-nav">
             <!-- Navigaation linkit -->
-            <li><a href="{{base_path}}">Reseptit</a></li>
+            <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Reseptit <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="{{base_path}}/reseptit/">Alkuruoat</a></li>
+                <li><a href="{{base_path}}/reseptit/">Pääruoat</a></li>
+                <li><a href="{{base_path}}/reseptit/">Jälkiruoat ja leivonnaiset</a></li>
+              </ul>
+            </li>
           </ul>
+          <form class="navbar-form navbar-right">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search">
+              <div class="input-group-btn">
+                <button class="btn btn-default" type="submit">
+                  <i class="glyphicon glyphicon-search"></i>
+                </button>
+              </div>
+            </div>
+          </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><span class="glyphicon glyphicon-user"></span> Rekisteröidy</a></li>
-            <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Kirjaudu sisään</a></li>
+            <li><a href="{{base_path}}/rekisteroidy/"><span class="glyphicon glyphicon-user"></span> Rekisteröidy</a></li>
+            <li><a href="#" data-toggle="modal" data-target="#kirjauduModal"><span class="glyphicon glyphicon-log-in"></span> Kirjaudu sisään</a></li>
           </ul>
         </div>
       </div>
     </nav>
-
+    <!-- kirjautumisen modal -->
+    <div class="modal fade" id="kirjauduModal" role="dialog">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title">Kirjaudu sisään</h4>
+          </div>
+          <div class="modal-body">
+            <form class="form-inline">
+              <div class="form-group">
+                <div class="input-group">
+                  <div class="input-group-addon"><i class="fa fa-user fa-fw"></i></div>
+                  <input type="username" class="form-control" id="username" placeholder="Käyttäjätunnus">
+                </div>
+              </div>
+              <div class="form-group">
+                <div class="input-group">
+                  <div class="input-group-addon"><i class="fa fa-key fa-fw"></i></div>
+                  <input type="password" class="form-control" id="pwd" placeholder="Salasana">
+                </div>
+              </div>
+              <button type="submit" class="btn btn-default">Kirjaudu</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- kirjautumisen modal loppuu -->
     <div id="main-container">
       <!-- Dynaaminen sisältö tulee tähän -->
       {% block content %}{% endblock %}
     </div>
-
+      <div class="footer_oma">
+        Copyright 2017 Kari Vänttinen
+      </div>
     {% block body %}
       <!-- jQuery -->
       <script src="{{base_path}}/vendor/jquery.min.js"></script>
@@ -64,5 +111,6 @@
       <!-- Oma skriptitiedostomme -->
       <script src="{{base_path}}/assets/js/site.js"></script>
     {% endblock %}
+    </div>
   </body>
 </html>
