lisää staattisia sivuja

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -79,7 +79,7 @@ ul.recipe_bar {
   padding: 0 15px 0 15px;
   margin: 10px 15px 10px 10px;
   overflow: hidden;
-  background-color: #d8e7ff;
+  background-color: #5999ff;
 }
 
 ul.recipe_bar > li {
