--- a/app/views/base.html
+++ b/app/views/base.html
@@ -87,7 +87,7 @@
                   <input type="password" class="form-control" id="pwd" placeholder="Salasana">
                 </div>
               </div>
-              <button type="submit" class="btn btn-default bg-primary">Kirjaudu</button>
+              <button type="submit" class="btn btn-primary">Kirjaudu</button>
             </form>
           </div>
         </div>
@@ -99,7 +99,7 @@
       {% block content %}{% endblock %}
     </div>
       <div class="footer_oma">
-        Copyright 2017 Kari Vänttinen
+        <p>Copyright 2017 Kari Vänttinen</p>
       </div>
     {% block body %}
       <!-- jQuery -->
