--- a/app/views/rekisteroidy.html
+++ b/app/views/rekisteroidy.html
@@ -18,7 +18,7 @@
           <input type="password" class="form-control" id="pwd" placeholder="Salasana" />
         </div>
       </div>
-      <button type="submit" class="btn btn-default bg-primary">Rekisteröidy</button>
+      <button type="submit" class="btn btn-primary">Rekisteröidy</button>
     </form>
   </div>
 
