--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -58,17 +58,23 @@ h3 {
   padding: 0;
 }
 
+/* footer */
+
 .footer_oma {
   height: 100px;
   width: 100%;
   background-color: #f8f8f8;
-  border-top: 1px solid;
+  border-top: 2px solid;
   border-color: #e7e7e7;
   padding: 10px;
   margin-top: 20px;
   left: 0;
   bottom: 0;
   position: absolute;
+}
+
+.footer_oma p {
+  text-align: center;
 }
 
 /* reseptin nappuloiden lista */
