--- a/app/views/rekisteroidy.html
+++ b/app/views/rekisteroidy.html
@@ -18,6 +18,12 @@
           <input type="password" class="form-control" id="pwd" placeholder="Salasana" />
         </div>
       </div>
+      <div class="form-group">
+        <div class="input-group">
+          <div class="input-group-addon"><i class="fa fa-key fa-fw"></i></div>
+          <input type="password" class="form-control" id="pwd" placeholder="Salasana uudestaan" />
+        </div>
+      </div>
       <button type="submit" class="btn btn-primary">Rekisteröidy</button>
     </form>
   </div>
