--- a/app/views/base.html
+++ b/app/views/base.html
@@ -59,7 +59,7 @@
             </div>
           </form>
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{{base_path}}/rekisteroidy/"><span class="glyphicon glyphicon-user"></span> Rekisteröidy</a></li>
+            <li><a href="{{base_path}}/kayttajat/rekisteroidy/"><span class="glyphicon glyphicon-user"></span> Rekisteröidy</a></li>
             <li><a href="#" data-toggle="modal" data-target="#kirjauduModal"><span class="glyphicon glyphicon-log-in"></span> Kirjaudu sisään</a></li>
           </ul>
         </div>
