--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,6 +5,9 @@
     <h1>Tervetuloa Reseptiarkistoon!</h1>
   </div>
     <div class="container">
+      <div class="alert alert-success">
+        {{message}}
+      </div>
       <h2>Suosituimmat reseptit:</h2>
       <div class="row">
         <div class="col-sm-4">
