--- a/app/views/rekisteroidy.html
+++ b/app/views/rekisteroidy.html
@@ -5,23 +5,23 @@
     <h1>Rekisteröidy Reseptiarkiston käyttäjäksi</h1>
   </div>
   <div class="container">
-    <form>
+    <form method="post" action="{{base_path}}/kayttajat/rekisteroidy/">
       <div class="form-group">
         <div class="input-group">
           <div class="input-group-addon"><i class="fa fa-user fa-fw"></i></div>
-          <input type="username" class="form-control" id="username" placeholder="Käyttäjänimi" />
+          <input type="username" class="form-control" name="kayttajanimi" id="username" placeholder="Käyttäjänimi" />
         </div>
       </div>
       <div class="form-group">
         <div class="input-group">
           <div class="input-group-addon"><i class="fa fa-key fa-fw"></i></div>
-          <input type="password" class="form-control" id="pwd" placeholder="Salasana" />
+          <input type="password" class="form-control" id="pwd" name="salasana" placeholder="Salasana" />
         </div>
       </div>
       <div class="form-group">
         <div class="input-group">
           <div class="input-group-addon"><i class="fa fa-key fa-fw"></i></div>
-          <input type="password" class="form-control" id="pwd" placeholder="Salasana uudestaan" />
+          <input type="password" class="form-control" id="pwd" name="salasana_toisto" placeholder="Salasana uudestaan" />
         </div>
       </div>
       <button type="submit" class="btn btn-primary">Rekisteröidy</button>
