--- a/app/views/resepti.html
+++ b/app/views/resepti.html
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-sm-5">
       <h3>{{resepti.nimi}}</h3>
-      <h4>Tekijä: <a href="#">esko666</a></h4>
+      <h4>Tekijä: <a href="#">{{resepti.kayttajanimi}}</a></h4>
       <p>
         {{resepti.kuvaus}}
       </p>
