--- a/app/views/base.html
+++ b/app/views/base.html
@@ -13,11 +13,15 @@
 
     {% block head %}
       <!-- Bootstrap (tyylitiedosto) -->
-      <link href="{{base_path}}/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-
+      <link href="{{base_path}}/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"  />
+      <link href="{{base_path}}/assets/css/awesomplete.css" rel="stylesheet" />
       <!-- Oma tyylitiedostomme -->
-      <link href="{{base_path}}/assets/css/site.css" rel="stylesheet">
+      <link href="{{base_path}}/assets/css/site.css" rel="stylesheet"  />
       <script src="https://use.fontawesome.com/f114e4802d.js"></script>
+      <script src="{{base_path}}/assets/js/awesomplete.js"></script>
+      <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
+      <script src="//code.jquery.com/jquery-1.12.4.js"></script>
+      <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     {% endblock %}
   </head>
 
