--- a/assets/css/awesomplete.css
+++ b/assets/css/awesomplete.css
@@ -6,7 +6,7 @@
     position: absolute;
     clip: rect(0, 0, 0, 0);
 }
-
+/*
 .awesomplete {
     display: inline-block;
     position: relative;
@@ -15,7 +15,7 @@
 .awesomplete > input {
     display: block;
 }
-
+*/
 .awesomplete > ul {
     position: absolute;
     left: 0;
@@ -47,7 +47,7 @@
 		transition: .3s cubic-bezier(.4,.2,.5,1.4);
 		transform-origin: 1.43em -.43em;
 	}
-	
+
 	.awesomplete > ul[hidden],
 	.awesomplete > ul:empty {
 		opacity: 0;
@@ -78,25 +78,25 @@
 		padding: .2em .5em;
 		cursor: pointer;
 	}
-	
+
 	.awesomplete > ul > li:hover {
 		background: hsl(200, 40%, 80%);
 		color: black;
 	}
-	
+
 	.awesomplete > ul > li[aria-selected="true"] {
 		background: hsl(205, 40%, 40%);
 		color: white;
 	}
-	
+
 		.awesomplete mark {
-			background: hsl(65, 100%, 50%);
+			background: hsl(246, 2%, 76%);
 		}
-		
+
 		.awesomplete li:hover mark {
-			background: hsl(68, 100%, 41%);
+			background: hsl(246, 2%, 90%);
 		}
-		
+
 		.awesomplete li[aria-selected="true"] mark {
 			background: hsl(86, 100%, 21%);
 			color: inherit;
