--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -34,6 +34,15 @@ h3 {
   padding-top: 5px;
 }
 
+h4 {
+  padding-bottom: 20px;
+}
+
+.redicon {
+  color: red;
+  cursor: pointer;
+}
+
 .navbar .container-fluid{
   max-width: 1200px;
   margin: 0px auto;
