käyttäjien listaukset ja editoinnit

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -19,6 +19,7 @@
       <link href="{{base_path}}/assets/css/site.css" rel="stylesheet"  />
       <script src="https://use.fontawesome.com/f114e4802d.js"></script>
       <script src="{{base_path}}/assets/js/awesomplete.js"></script>
+      <script src="{{base_path}}/assets/js/site.js"></script>
       <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
       <script src="//code.jquery.com/jquery-1.12.4.js"></script>
       <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
@@ -46,7 +47,7 @@
             <!-- Navigaation linkit -->
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Reseptit <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="{{base_path}}/reseptit/">Alkuruoat</a></li>
+                <li><a href="{{base_path}}/reseptit/">Alkuruoat ja naposteltavat</a></li>
                 <li><a href="{{base_path}}/reseptit/">Pääruoat</a></li>
                 <li><a href="{{base_path}}/reseptit/">Jälkiruoat ja leivonnaiset</a></li>
               </ul>
