--- a/app/views/home.html
+++ b/app/views/home.html
@@ -5,7 +5,7 @@
     <h1>Tervetuloa Reseptiarkistoon!</h1>
   </div>
     <div class="container">
-      {% if message == true %}
+      {% if message %}
       <div class="alert alert-success alert-dismissable">
         <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
         {{message}}
