--- a/app/views/kayttaja/kayttajat.html
+++ b/app/views/kayttaja/kayttajat.html
@@ -2,7 +2,7 @@
 
 {% block content %}
   <div class="page-header">
-    <h3>Reseptiarkiston käyttäjät</h3>
+    <h2>Reseptiarkiston käyttäjät</h2>
   </div>
     <div class="container">
       {% if message %}
@@ -11,7 +11,6 @@
         {{message}}
       </div>
       {% endif %}
-      <h2>Suosituimmat reseptit:</h2>
       <form method="post" action="{{base_path}}/kayttajat/">
       <table class="table table-striped table-bordered">
         <thead>
@@ -25,11 +24,14 @@
         </thead>
         <tbody>
           {% for kayttaja in kayttajat %}
+          {% if kayttaja.kayttajanimi %}
           <tr>
+            <td class="hidden"><input class="form-control" name="id[]" id="id" type="text" value="{{kayttaja.id}}" /></td>
             <td>{{ kayttaja.id }}</td>
+            <td class="hidden"><input class="form-control" name="kayttajanimi[]" id="kayttajanimi" type="text" value="{{kayttaja.kayttajanimi}}" /></td>
             <td><a href="{{base_path}}/kayttajat/{{kayttaja.id}}">{{ kayttaja.kayttajanimi }}</a></td>
             <td>
-            <select id="admin" name="admin" class="form-control">
+            <select id="admin" class="form-control" name="admin[]">
             {% if kayttaja.admin %}
             <option value="1">True</option>
             <option value="0">False</option>
@@ -39,12 +41,19 @@
             {% endif %}
             </td>
             </select>
-            <td><a onclick="" class="sulje" id="kayttaja_"{{kayttaja.id}}><i class="fa fa-times fa-2x redicon" aria-hidden="true"></i></a></td>
+            <td>
+              <select class="form-control" name="delete[]" id="delete">
+                <option value="0">Älä tee mitään</option>
+                <option value="1">Poista käyttäjä</option>
+              </select>
+            </td>
           </tr>
+          {% endif %}
           {% endfor %}
         </tbody>
       </table>
-      <button class="btn btn-primary room" action="">Tallenna</button>
+      <button class="btn btn-primary room" type="submit">Tallenna</button>
+      <button class="btn btn-danger room" type="reset">Hylkää muutokset</button>
       </form>
   </div>
 
