--- a/app/views/resepti/resepti.html
+++ b/app/views/resepti/resepti.html
@@ -4,6 +4,10 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-5">
+      {% if user_logger_in.admin or user_logged_in.id == resepti.kayttaja_id %}
+      <a href="{{base_path}}/resepti/{{resepti.id}}/poista/"><i class="fa fa-times fa-2x redicon room" aria-hidden="true"></i> Poista resepti      </a>
+      <a href="{{base_path}}/resepti/{{resepti.id}}/muokkaa/"><i class="fa fa-pencil fa-2x redicon room" aria-hidden="true"></i> Muokkaa reseptiä</a>
+      {% endif %}
       <h3>{{resepti.nimi}}</h3>
       <h4>Tekijä: <a href="#">{{resepti.kayttajanimi}}</a></h4>
       <p>
@@ -58,7 +62,11 @@
   </div>
   <div class="row">
     <div class="col-sm-12">
-      {{resepti.ohje}}
+      <ul>
+        {% for o in ohjeet %}
+        <li>{{loop.index}} - {{o.ohje}}</li>
+        {% endfor %}
+      </ol>
     </div>
   </div>
 </div>
