--- a/app/views/resepti/reseptit.html
+++ b/app/views/resepti/reseptit.html
@@ -7,15 +7,15 @@
         {% for resepti in reseptit %}
         <div class="col-sm-4">
           {% if loop.index is divisible by(2) %}
-          {{ include('reseptit_resepti_item.html') }}
+          {{ include('resepti/reseptit_resepti_item.html') }}
         </div>
         <div class="col-sm-4">
           {% elseif loop.index is divisible by(3) %}
-          {{ include('reseptit_resepti_item.html') }}
+          {{ include('resepti/reseptit_resepti_item.html') }}
         </div>
         <div class="col-sm-4">
           {% else %}
-          {{ include('reseptit_resepti_item.html') }}
+          {{ include('resepti/reseptit_resepti_item.html') }}
           {% endif %}
         </div>
         {% endfor %}
