--- a/app/views/kayttaja/login.html
+++ b/app/views/kayttaja/login.html
@@ -10,7 +10,7 @@
           <div class="form-group">
             <div class="input-group">
               <div class="input-group-addon"><i class="fa fa-user fa-fw"></i></div>
-              <input type="username" class="form-control" id="username" name="kayttajanimi" value="{{username}}" placeholder="Käyttäjätunnus">
+              <input type="username" class="form-control" id="username" name="kayttajanimi" value="{{username}}" placeholder="Käyttäjätunnus" autofocus>
             </div>
           </div>
           <div class="form-group">
