--- a/app/views/base.html
+++ b/app/views/base.html
@@ -47,9 +47,12 @@
             <!-- Navigaation linkit -->
             <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Reseptit <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="{{base_path}}/reseptit/">Alkuruoat ja naposteltavat</a></li>
-                <li><a href="{{base_path}}/reseptit/">Pääruoat</a></li>
-                <li><a href="{{base_path}}/reseptit/">Jälkiruoat ja leivonnaiset</a></li>
+                <li><a href="{{base_path}}/resepti/alkuruoat/">Alkuruoat ja naposteltavat</a></li>
+                <li><a href="{{base_path}}/resepti/paaruoat/">Pääruoat</a></li>
+                <li><a href="{{base_path}}/resepti/jalkiruoat/">Jälkiruoat ja leivonnaiset</a></li>
+                {% if user_logged_in %}
+                <li><a href="{{base_path}}/resepti/omat-reseptit/{{user_logged_in.id}}">Omat reseptit</a></li>
+                {% endif %}
               </ul>
             </li>
             {% if user_logged_in.admin %}
