--- a/app/views/kayttaja/kayttaja.html
+++ b/app/views/kayttaja/kayttaja.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <div class="page-header">
+{% if user_logged_in.admin or user_logged_in.id == kayttaja.id %}
+ <div class="page-header">
     <h2>{{kayttaja.kayttajanimi}}</h2>
   </div>
     <div class="container">
@@ -41,5 +42,9 @@
         <button type="reset" class="btn btn-danger room">Hylkää muutokset</button>
       </form>
   </div>
-
+{% else %}
+<div>
+  Sinulla ei ole oikeuksia tälle sivulle
+</div>
+{% endif %}
 {% endblock %}
