--- a/app/views/kayttaja/rekisteroidy.html
+++ b/app/views/kayttaja/rekisteroidy.html
@@ -21,42 +21,42 @@
         <label for="username">Käyttäjänimi:</label>
         <div class="input-group">
           <div class="input-group-addon"><i class="fa fa-user fa-fw"></i></div>
-          <input type="username" class="form-control" name="kayttajanimi" id="username" value="{{syote.kayttajanimi}}" placeholder="Käyttäjänimi" />
+          <input type="username" class="form-control" name="kayttajanimi" id="username" value="{{syote.kayttajanimi}}" placeholder="Käyttäjänimi" required />
         </div>
       </div>
       <div class="form-group">
         <label for="sposti">Sähköpostiosoite:</label>
         <div class="input-group">
         <div class="input-group-addon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
-        <input type="email" class="form-control" name="sposti" id="sposti" value="{{syote.sposti}}" placeholder="Sähköpostiosoite" />
+        <input type="email" class="form-control" name="sposti" id="sposti" value="{{syote.sposti}}" placeholder="Sähköpostiosoite" required />
         </div>
       </div>
       <div class="form-group">
         <label for="etunimi">Etunimi:</label>
         <div class="input-group">
         <div class="input-group-addon"><i class="fa fa-user fa-fw"></i></div>
-        <input type="text" class="form-control" name="etunimi" id="etunimi" value="{{syote.etunimi}}" placeholder="Etunimi" />
+        <input type="text" class="form-control" name="etunimi" id="etunimi" value="{{syote.etunimi}}" placeholder="Etunimi" required />
         </div>
       </div>
       <div class="form-group">
         <label for="sukunimi">Sukunimi:</label>
         <div class="input-group">
         <div class="input-group-addon"><i class="fa fa-user fa-fw"></i></div>
-        <input type="text" class="form-control" name="sukunimi" id="sukunimi" value="{{syote.sukunimi}}" placeholder="Sukunimi" />
+        <input type="text" class="form-control" name="sukunimi" id="sukunimi" value="{{syote.sukunimi}}" placeholder="Sukunimi" required />
         </div>
       </div>
       <div class="form-group">
         <label for="salasana">Salasana:</label>
         <div class="input-group">
           <div class="input-group-addon"><i class="fa fa-key fa-fw"></i></div>
-          <input type="password" class="form-control" id="pwd" name="salasana" placeholder="Salasana" />
+          <input type="password" class="form-control" id="pwd" name="salasana" placeholder="Salasana" required />
         </div>
       </div>
       <div class="form-group">
         <label for="salasana_toisto">Toista salasana:</label>
         <div class="input-group">
           <div class="input-group-addon"><i class="fa fa-key fa-fw"></i></div>
-          <input type="password" class="form-control" id="pwd" name="salasana_toisto" placeholder="Salasana uudestaan" />
+          <input type="password" class="form-control" id="pwd" name="salasana_toisto" placeholder="Salasana uudestaan" required />
         </div>
       </div>
       <button type="submit" class="btn btn-primary">Rekisteröidy</button>
