--- a/app/views/resepti/omat_reseptit.html
+++ b/app/views/resepti/omat_reseptit.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-{% if user_logged_in.id == reseptit.0.kayttaja_id or user_logged_in.admin %}
+{% if user_logged_in and user_logged_in.id == reseptit.0.kayttaja_id or user_logged_in.admin %}
     <div class="container">
       <h3>Reseptit</h3>
       <div class="row">
@@ -22,6 +22,10 @@
         {% endfor %}
       </div>
   </div>
+{% elseif not user_logged_in %}
+<p>
+  <a href="#" data-toggle="modal" data-target="#kirjauduModal">Kirjaudu sisään</a> nähdäksesi reseptisi.
+</p>
 {% elseif not reseptit %}
   <p>
     Sinulla ei ole reseptejä.
@@ -31,4 +35,7 @@
   Sinulla ei ole oikeuksia tälle sivulle.
 </p>
 {% endif %}
+<!-- kirjautumisen modal -->
+{{ include('kayttaja/login.html') }}
+<!-- kirjautumisen modal loppuu -->
 {% endblock %}
