--- a/app/views/base.html
+++ b/app/views/base.html
@@ -52,6 +52,7 @@
                 <li><a href="{{base_path}}/resepti/jalkiruoat/">Jälkiruoat ja leivonnaiset</a></li>
                 {% if user_logged_in %}
                 <li><a href="{{base_path}}/resepti/omat-reseptit/{{user_logged_in.id}}">Omat reseptit</a></li>
+                <li><a href="{{base_path}}/resepti/lisaa-resepti/">Lisää resepti</a></li>
                 {% endif %}
               </ul>
             </li>
