--- a/app/views/resepti/lisaa_resepti.html
+++ b/app/views/resepti/lisaa_resepti.html
@@ -3,11 +3,24 @@
 {% block content %}
 <h3>Lisää resepti</h3>
   <div class="container">
-    <form class="form-horizontal" action="{{base_path}}/lisaa-resepti/" method="post" enctype="multipart/form-data">
-      <h4>Raaka-aineet</h4>
-      <div id="raaka_aine_valinnat">
+    <form class="form-horizontal" action="{{base_path}}/resepti/lisaa-resepti/" method="post" enctype="multipart/form-data">
+      <h4>Reseptin nimi</h4>
+      <div class="form-group">
+        <div class="col-sm-1">
 
+        </div>
+        <div class="col-sm-6">
+          <input class="form-control" id="nimi" type="text" placeholder="Nimi" name="nimi">
+        </div>
+        <div class="col-sm-5">
+
+        </div>
       </div>
+      <h4>Raaka-aineet</h4>
+      <div class="hidden" name="kayttaja_id" value="{{user_logged_in.id}}"></div>
+      <section id="raaka_aine_valinnat">
+        <input class="hidden" type="text" name="kayttaja_id" value="{{user_logged_in.id}}">
+      </section>
       <div class="form-group">
         <div class="col-sm-6">
           <input class="form-control" id="raaka_aine" type="text" placeholder="Raaka-aine" name="resepti_raaka_aineet[]">
@@ -32,7 +45,7 @@
       </div>
     <div class="row">
       <div class="col-sm-12">
-        <button type="button" class="btn btn-default" onClick="test()">Lisää raaka-aine</button>
+        <button type="button" class="btn btn-primary" onClick="teeUusiRaaka_aine()">Lisää raaka-aine</button>
         <hr />
       </div>
     </div>
@@ -52,14 +65,24 @@
         </div>
       </div>
     </div>
+    <section id="ohjeet">
+
+    </section>
     <div class="row">
       <div class="col-sm-12">
         <div class="form-group">
-          <label for="ohjeet">Ohjeet:</label>
-          <textarea class="form-control" rows="10" id="ohjeet" name="ohjeet"></textarea>
+          <h4>Ohjeet:</h4>
+          <label for="ohjeet">Lisää ohjeet reseptillesi. Lisättyäsi yhden vaiheen ohjeen paina tallenna ja lisää seuraava vaihe.</label>
+          <textarea class="form-control" rows="10" id="ohje" name="ohjeet[]"></textarea>
         </div>
       </div>
     </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <button type="button" class="btn btn-primary" onclick="teeUusiOhje()">Tallenna</button>
+      </div>
+    </div>
+    <hr />
     <div class="form-group">
       <label class="control-label col-sm-2" for="valm_aika">Valmistusaika: </label>
       <div class="col-sm-4">
@@ -74,13 +97,13 @@
     </div>
     <div class="form-group">
       <label for="valitse_kategoria">Valitse kategoria</label>
-      <select class="form-control" id="valitse_kategoria">
+      <select class="form-control" id="valitse_kategoria" name="kategoria">
         <<option value="1">Alkuruoka tai naposteltava</option>
         <<option value="2">Pääruoka</option>
         <<option value="3">Jälkiruoka tai leivonnainen</option>
       </select>
     </div>
-    <button type="button" class="btn btn-primary">Lisää resepti</button>
+    <button type="submit" class="btn btn-primary">Lisää resepti</button>
   </form>
   </div>
   <script>
