--- a/app/views/resepti/reseptit.html
+++ b/app/views/resepti/reseptit.html
@@ -1,25 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container">
-      <h3>Reseptit</h3>
-      <div class="row">
-        {% for resepti in reseptit %}
-        <div class="col-sm-4">
-          {% if loop.index is divisible by(2) %}
-          {{ include('resepti/reseptit_resepti_item.html') }}
-        </div>
-        <div class="col-sm-4">
-          {% elseif loop.index is divisible by(3) %}
-          {{ include('resepti/reseptit_resepti_item.html') }}
-        </div>
-        <div class="col-sm-4">
-          {% else %}
-          {{ include('resepti/reseptit_resepti_item.html') }}
-          {% endif %}
-        </div>
-        {% endfor %}
-      </div>
-  </div>
+    {{ include('resepti/resepti_listaus.html') }}
 
 {% endblock %}
