monenlaista demoa varten

--- a/app/views/base.html
+++ b/app/views/base.html
@@ -20,9 +20,7 @@
       <script src="https://use.fontawesome.com/f114e4802d.js"></script>
       <script src="{{base_path}}/assets/js/awesomplete.js"></script>
       <script src="{{base_path}}/assets/js/site.js"></script>
-      <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
-      <script src="//code.jquery.com/jquery-1.12.4.js"></script>
-      <script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     {% endblock %}
   </head>
 
